--- a/game.html
+++ b/game.html
@@ -7,18 +7,32 @@
   <meta name="description" content="Chinese Checker game">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <!-- build:js http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.js"></script>
+  <!-- /build -->
+
   <script src="http://yoav-zibin.github.io/emulator/ngDraggable.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-touch.min.js"></script>
-  <script src="game.js"></script>
-  <script src="gameLogic.js"></script>
+
+  <!-- build:js dist/everything.min.js -->
+  <script src="src/gameLogic.js"></script>
+  <script src="src/game.js"></script>
+  <script src="src/aiService.js"></script>
+  <!-- /build -->
+  
+  <!-- build:js http://yoav-zibin.github.io/emulator/dist/gameServices.min.js -->
+  <script src="http://yoav-zibin.github.io/emulator/alphaBetaService.js"></script>
+  <script src="http://yoav-zibin.github.io/emulator/resizeGameAreaService.js"></script>
   <script src="http://yoav-zibin.github.io/emulator/gameService.js"></script>
   <script src="http://yoav-zibin.github.io/emulator/messageService.js"></script>
   <script src="http://yoav-zibin.github.io/emulator/stateService.js"></script>
+  <!-- /build -->
+
 <link rel="stylesheet" type="text/css" href="game.css">
 </head>
 <body ng-controller="Ctrl">
- 
+ <div id="gameArea">
+  <section id="board">
   <img style="position:relative; border: 1px solid ;z-index: -1 ;width :625px; height:625px" src="img/GoodBoard.png">
   	<div ng-repeat="row in board track by $index">
         <div ng-repeat="cell in row track by $index" 
@@ -49,6 +63,7 @@
         </div>
     </div>
   </img>
-  
+  </section>
+</div>
 </body>
 </html>
