--- a/game.html
+++ b/game.html
@@ -43,6 +43,31 @@
  <div id="gameArea">
   <section id="board">
   <img style="position:relative; border: 1px solid ;z-index: -1 ;width :100%; height:100%;" src="img/GoodBoard.png">
+
+  <div ng-repeat="row in board track by $index">
+        <div ng-repeat="cell in row track by $index" 
+        ng-click="cellClicked(board.indexOf(row),$index)" 
+        ng-style="{'position':'absolute','top':setPagePositionTop(board.indexOf(row), $index), 'left':setPagePosition($index, board.indexOf(row)) }" 
+        ng-class="{boxShape: cell}" >       
+          <div 
+          ng-class="{'checkerShapeO': cell=='O', 'checkerShapeX': cell=='X', 
+          boxGreen: selectedPosition[0][0]==board.indexOf(row) && selectedPosition[0][1]==$index , 
+           'move_up_left' :board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&ul,
+           'move_up_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&ur,
+           'move_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&r,
+           'move_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&l,
+           'move_down_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&dr,
+           'move_down_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&dl,
+           'jump_up_left' :board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jul,
+           'jump_up_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jur,
+           'jump_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jr,
+           'jump_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jl,
+           'jump_down_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jdr,
+           'jump_down_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jdl,
+           'jumped':board.indexOf(row)==ani_point[0]&&$index==ani_point[1] }"></div> 
+
+        </div>
+    </div>
   	
   </img>
   </section>
