implement drag and drop

--- a/game.html
+++ b/game.html
@@ -64,7 +64,9 @@
            'jump_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jl,
            'jump_down_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jdr,
            'jump_down_left': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&jdl,
-           'jumped':board.indexOf(row)==ani_point[0]&&$index==ani_point[1] }"></div> 
+           'jumped':board.indexOf(row)==ani_point[0]&&$index==ani_point[1] }"
+           ng-style="{'position':'relative'}"
+           ></div> 
 
         </div>
     </div>
