--- a/game.html
+++ b/game.html
@@ -50,7 +50,7 @@
         ng-style="{'position':'absolute','top':setPagePositionTop(board.indexOf(row), $index), 'left':setPagePosition($index, board.indexOf(row)) }" 
         ng-class="{boxShape: cell}" >       
           <div id="myPiece_{{board.indexOf(row)}}x{{$index}}"
-          ng-class="{'checkerShapeO': cell=='O', 'checkerShapeX': cell=='X', 
+          ng-class="{'checkerShapeO': getCellTypeO(board.indexOf(row), $index), 'checkerShapeX': getCellTypeX(board.indexOf(row), $index), 
           boxGreen: selectedPosition[0][0]==board.indexOf(row) && selectedPosition[0][1]==$index , 
            'move_up_left' :board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&ul,
            'move_up_right': board.indexOf(row)==ani_point[0]&&$index==ani_point[1]&&ur,
