remove translation to test bug

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ 'CHINESECHECKER_GAME' | translate }}</title>
+  <title>Chinese Checker</title>
   <meta name="description" content="Chinese Checker game">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   
@@ -46,7 +46,6 @@
   <script src="http://yoav-zibin.github.io/emulator/angular-translate/angular-translate.2.6.1.js"></script>
   <!-- /build -->
 
-  <script>window.angularTranslationLanguages = ['en', 'zh'];</script>
   <link rel="stylesheet" type="text/css" href="game.css">
   <link rel="stylesheet" type="text/css" href="http://yoav-zibin.github.io/emulator/main.css">
 </head>
